// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary snapshot should match with 0 expenses 1`] = `
<div>
  Viewing 
  0
   
  expenses 
  totalling 
  $0.00
</div>
`;

exports[`ExpenseSummary snapshot should match with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense 
  totalling 
  $23.46
</div>
`;

exports[`ExpenseSummary snapshot should match with multiple expenses 1`] = `
<div>
  Viewing 
  23
   
  expenses 
  totalling 
  $23,642,366.43
</div>
`;
